Fixed Loading picture width on bigger screen. Added an animation on mobile. Added menuOpened and navbarAnimation variables

--- a/css/base.css
+++ b/css/base.css
@@ -96,7 +96,7 @@ p {
 .loading-content img{
     margin: 0.5rem;
     height: auto;
-    width: 30%;
+    max-width: 15rem;
     display: flex;
     margin-left: auto;
     margin-right: auto;
